# district

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
resources/: sqlite3.lib
src/: logger.rs  main.rs
src/application/: application.rs  mod.rs  timer.rs
src/application/bot/: bot.rs  events.rs  mod.rs
src/application/bot/commands/: db_search_command.rs  info_command.rs  mod.rs  send_command.rs
src/application/config/: auth_config.rs  config.rs  db_config.rs  mod.rs
src/application/config/bots/: bot_config.rs  commands_config.rs  mod.rs  presence_config.rs
src/application/config/server/: mod.rs  server_bot_config.rs  server_config.rs
src/application/db/: database.rs  database_handler.rs  mod.rs
src/application/db/leaderboards/: mod.rs  structs.rs
src/application/db/player/: mod.rs  structs.rs
src/application/db/punishments/: mod.rs  structs.rs
src/application/features/: mod.rs
src/application/features/lang/: mod.rs
src/application/features/logs/: mod.rs
src/application/routes/: messages.rs  mod.rs
src/application/routes/http/: log_routes.rs  mod.rs  static.rs
src/application/routes/http/db/: leaderboard.rs  mod.rs  players.rs  punishments.rs  verification.rs
src/application/routes/websocket/: logs.rs  mod.rs  stats.rs  structs.rs
src/application/server/: server.rs  status.rs
src/application/utils/: json.rs  time.rs
