[package]
name = "district_server"
version = "0.3.1"
authors = ["oxydien <bussiness@oxydien.dev>"]
homepage= "https://oxydien.dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.0.0"
reqwest = "0.11.23"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
serde_repr = "0.1.18"
serenity = { version = "0.12.0", features = ["gateway"] }
tokio = { version = "1", features = ["full"] }
time = "0.3.31"
lazy_static = "1.4.0"
rusqlite = "0.31.0"
chrono = "0.4.31"
rand = "0.8.5"
regex = "1.10.3"
rocket_ws = "0.1.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
tracing = "0.1.40"
colored = "2.1.0"
